# kddcup_wind_power_forecast

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
tests/: test_frontend.py  test_impute_power.py
windfarm_forecast/: feature_engineering.py  utils.py
windfarm_forecast/frontend/: app.py
windfarm_forecast/notebooks/: 00_data_exploration_initial.ipynb  01_preprocessing_and_exploration.ipynb  02_create_train_validation_datasets.ipynb  03_feature_engineering.ipynb  04_modeling.ipynb
