[tool.poetry]
name = "windfarm-forecast"
version = "0.1.0"
description = ""
authors = ["Eric Fischer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
scikit-learn = "<1.6"
lightgbm = "^4.5.0"
streamlit = "^1.41.1"
ipykernel = "^6.29.5"
matplotlib = "^3.10.0"
pyyaml = "^6.0.2"
statsmodels = "^0.14.4"
seaborn = "^0.13.2"
plotly = "^5.24.1"
nbformat = "^5.10.4"
pytest = "^8.3.4"
xgboost = "^2.1.3"
mlflow = "^2.19.0"
databricks-sdk = "^0.40.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.0"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py39"  # adjust based on your Python version

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
]

# Ignore line-length violations in Jupyter notebooks
[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 10
